default/objects/Picklist_Record_Type_Mapping__mdt/Picklist_Record_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Picklist Record Type Mapping</label>
    <pluralLabel>Picklist Record Type Mappings</pluralLabel>
</CustomObject>