default/objects/Picklist_Record_Type_Mapping__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>