default/objects/Picklist_Record_Type_Mapping__mdt/fields/Pick_List_Values__c.field-meta.xml
<CustomField>
    <fullName>Pick_List_Values__c</fullName>
    <label>Pick List Values</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>