default/objects/Picklist_Record_Type_Mapping__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>